# ting

./: .gitignore  LICENSE  README.md  README.zh-CN.md  build-android.bat  ci_post_clone.sh  final-link-fail.txt  index.html  package-lock.json  package.json  run_build.bat  test_ctx.rs  vite.config.ts
.claude/: settings.json  settings.local.json
src-tauri/: 2  Cargo.toml  Info.ios.plist  abi_test.cpp  android_abi_fix.cpp  android_fix.cmake  android_toolchain_wrapper.cmake  android_wrapper.cmake  build-final-test.txt  build.rs  check-error.txt  check_mangle.cpp  compile_bridge.bat  detailed-build-log.txt  final-build-log.txt  final-link-error.txt  final-raw-link-error.txt  manual-link-error.txt  ort_sys_debug.txt  tauri.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  mobile.json
src-tauri/linking_hacks/: abi_bridge.cpp  libcxx_symbols.txt  mangling_test.cpp
src-tauri/permissions/: app.toml
src-tauri/src/: lib.rs  main.rs  session.rs  test_rodio.rs  test_rubato.rs
src-tauri/src/ai/: g2p.rs  mod.rs  model_manager.rs  pronunciation_evaluator.rs  whisper_engine.rs
src-tauri/src/audio/: engine.rs  mod.rs  recorder.rs  sonic.rs
src-tauri/src/commands/: ai_commands.rs  audio_commands.rs  auth_commands.rs  download_commands.rs  file_commands.rs  mod.rs  progress_commands.rs  pronunciation_commands.rs  settings_commands.rs  speaking_commands.rs  study_commands.rs  system_commands.rs
src-tauri/src/db/: mod.rs  study_store.rs  transcript_store.rs  user_store.rs
src-tauri/src/utils/: path_utils.rs  新建文本文档.txt
(+92 files in other folders)
