[package]
name = "ting"
version = "1.0.2"
description = "Ting - Cross-platform language learning app for listening and speaking"
authors = ["you"]
edition = "2021"

[lib]
name = "ting_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
cc = "1.2.56"
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = { version = "0.20", features = ["mp3", "vorbis", "flac", "wav"] }
symphonia = { version = "0.5", features = ["all"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "process", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "json"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
whisper-rs = "0.15.1"
futures-util = "0.3.32"
argon2 = "0.5"
which = "7"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8", features = ["getrandom"] }
ort = { version = "2.0.0-rc.11", features = ["ndarray"] }
hound = "3.5"
ndarray = "0.17"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2.4.5"
percent-encoding = "2.3"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"
